src/test/ui/rfcs/rfc-2528-type-changing-struct-update/feature-gate.stderr
error[E0308]: mismatched types
  --> $DIR/feature-gate.rs:21:16
   |
LL |         state: State1,
   |                ^^^^^^ expected struct `State2`, found struct `State1`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
